# dgc2tag

./: .env  .env.example  .gitignore  NETWORK_TEST_LOG.md  PROJECT.md  README.md  TODO.md  font-stretch-test.html  library.md  package-lock.json  package.json  style.html  todo.md
.mimocode/plans/: 1782303891683-playful-river.md  1782385638048-witty-cactus.md  1782496412769-gentle-river.md  1782502097610-gentle-wolf.md  1782517997421-glowing-cactus.md  1782557049532-nimble-meadow.md  1782592414258-cosmic-sailor.md  1782667841424-silent-cactus.md  1782728912212-gentle-mountain.md  1782743200797-curious-comet.md
client/: README.md  index.html  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
client/src/: App.tsx  api.ts  build.ts  index-new.css  index.css  sourceConfigs.ts  types.ts
client/src/components-new/: ApplyPanel.tsx  ContextMenu.tsx  DiffLine.tsx  ErrorBoundary.tsx  FolderPicker.tsx  Footer.tsx  GenreCloud.tsx  LibraryView.tsx  MatchRow.tsx  MultiArtistTracks.tsx  ProgressOverlay.tsx  ResultCard.tsx  ResultModal.tsx  SearchBar.tsx  SearchResults.tsx  SettingsModal.tsx  SimPercent.tsx  SingleArtistTracks.tsx  TagComparison.tsx  TrackArtistField.tsx  TrackMatcher.tsx  TreeItem.tsx  TreeView.tsx  WebfetchOverlay.tsx
server/: config.default.json  package.json  tsconfig.tsbuildinfo
server/src/: bandcamp.ts  cache.ts  config.ts  deezer.ts  discogs.ts  index.ts  library.ts  logger.ts  musicbrainz.ts  scanner.ts  scraper.ts  tagWriter.ts  tagger.ts  trackUtils.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
(+48 files in other folders)
